[tool.poetry]
name = "mute"
version = "0.1.0"
description = ""
authors = ["Matan Gover <matangover@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
muspy = {git = "https://github.com/matangover/muspy", rev = "matan"}
librosa = "^0.9.2"
music21 = "^8.1.0"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
